...
        app:layout_constraintEnd_toEndOf="@+id/feedback_area_critical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_area_critical" />

    <ImageView
        android:id="@+id/leftTurn_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
        android:layout_marginLeft="@dimen/margin_before_imageViews_feedback_area_info"
        android:layout_marginStart="@dimen/margin_before_imageViews_feedback_area_info"
        android:layout_marginTop="@dimen/margin_above_imageViews_feedback_area_info"
        android:scaleType="fitCenter"
...
        android:layout_marginTop="@dimen/margin_above_imageViews_feedback_area_info"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/leftTurn_imageView"
        app:layout_constraintTop_toTopOf="@+id/feedback_area_info"/>

    <ImageView
        android:id="@+id/rightTurn_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
        android:layout_marginLeft="@dimen/margin_before_imageViews_feedback_area_info"
        android:layout_marginStart="@dimen/margin_before_imageViews_feedback_area_info"
        android:layout_marginTop="@dimen/margin_above_imageViews_feedback_area_info"
        android:scaleType="fitCenter"
...
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/lights_imageView"
        app:layout_constraintTop_toTopOf="@+id/feedback_area_info"
        app:srcCompat="@drawable/cruise_control_off" />

    <ImageView
        android:id="@+id/engineStartStop_imageView"
        android:layout_width="@dimen/width_imageViews_feedback_area_info"
        android:layout_height="@dimen/height_imageViews_feedback_area_info"
        android:layout_marginLeft="@dimen/margin_before_imageViews_feedback_area_info"
        android:layout_marginStart="@dimen/margin_before_imageViews_feedback_area_info"
        android:layout_marginTop="@dimen/margin_above_imageViews_feedback_area_info"
        android:scaleType="fitCenter"
...
