...
    <string name="exit_info">Please click BACK again to exit</string>
    <string name="tachometer_value">0</string>
    <string name="tachometer_null_value">-/-</string>
    <string name="tachometer_unit">km/h</string>
    <string name="tachometer_info">%1s %2s</string>

    <string name="long_click_info">Long-click to interact</string>

    <string name="reverse_warning">Leave throttle in neutral to set/unset the reverse</string>

    <string name="cruise_control_info">Cruise Control activated.\nUse throttle to deactivate
        it</string>

...

    <string name="auto_to_manual_warning">Not possible option due to \"Handling Assistance\"
        settings</string>

    <string name="server_dialog_title">Server IP and Port</string>
    <string name="server_dialog_msg">Set IP and port</string>
    <string name="server_dialog_ok_button">OK</string>
    <string name="server_dialog_cancel_button">Cancel</string>
    <string name="server_ip_hint">Server IP</string>
    <string name="server_port_hint">Server Port</string>Please click BACK again to exit
</resources>

