<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/server_connection_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Testing IPs: 192.168.1.9 or 10.0.2.2 or 192.168.200.245 -->
    <EditText
        android:id="@+id/serverIp_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="192.168.1.8"
        android:hint="@string/server_ip_hint" />

    <EditText
        android:id="@+id/serverPort_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="8080"
        android:hint="@string/server_port_hint" />

</LinearLayout>